# es-demo

./: build.gradle
src/hello/c/: hello.c
src/lib/: CMakeLists.txt
src/main/java/: HelloWorld.java
